EKS/Fargate/advanced/app/02-ns-app2/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-app2
# Apps deployed in this namespace will run on a EC2 Managed Node Group
